$Id$

2017-12-02  Christian Franke  <franke@computer.org>

	Add initial support for smartctl JSON output mode (#766):
	json.cpp, json.h: New files with JSON support class.
	Makefile.am, os_win32/vc14/smartctl.vcxproj*: Add new files.
	ataprint.cpp: Add initial JSON support for -i, -H, -A and -l [x]error.
	scsiprint.cpp: Add initial JSON support for -i and -H.
	smartctl.cpp, smartctl.h: Add '-j, --json' option, global JSON object
	and new print functions.
	smartctl.8.in: Document new functionality.

	atacmds.cpp: Remove no longer needed variable 'must_swap'.

	os_win32.cpp: Remove include of smartctl.h, add extern declaration.
	Decode Windows Server 1709 build number.

	configure.ac, os_linux.cpp: Always include <sys/sysmacros.h> if available.
	This silences a 'deprecated' warning from glibc 2.25 headers.

2017-11-20  Alex Samorukov  <samm@os2.kiev.ua>

	os_netbsd.cpp (fix regressions in smartmontools 6.6)
	 - fix BE platforms support, tested on sparc64 (#943)
	 - fix name based device type detection (#943)
	 - Add byte-swapping for IDENTIFY command and remove related hacks from the
	   atacmds.cpp (#117)

2017-11-18  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Add Swissbit C440 industrial cf card series (#942)
	- Fix Innolite Satadom D150QV entry (#939)

2017-11-16  Christian Franke  <franke@computer.org>

	smartd.initd.in: Remove FreeBSD section.

	os_linux.cpp: Add missing braces to 3ware SELinux code.
	This possibly harmless bug was introduced ~10 years ago in r2510.
	It is now detected by g++ 6.3 -Wmisleading-indentation warning.

	update-smart-drivedb.in: Include configured PATH in help and
	error messages.  Allow digits in SVN Id user name.

	configure.ac: Prepend '/usr/local/bin' to default for
	'--with-scriptpath' (#941).

2017-11-15  Christian Franke  <franke@computer.org>

	smartd.cpp: Use 'sigaction()' instead of deprecated 'sigset()'
	or 'signal()'.
	configure.ac: Add '--with-signal-func' to select old function
	if needed.
